Ready to deploy Home, Dashboard & Profile page Are done

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,12 @@
 
 @import "tailwindcss";
+
+body {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;     
+  overflow-y: scroll;        
+}
+
+body::-webkit-scrollbar {
+  display: none;             
+}
